# chatGPT-telegram-bot

./: Dockerfile  LICENSE  Makefile  README.md  enviroment.py  main.py  pyproject.toml  utils.py
chatgpt_telegram_bot/: enviroment.py  main.py  models.py  openai_client.py  test_src.py  tokenizer.py  utils.py
chatgpt_telegram_bot/context/: __init__.py  context_manager.py  test_context_manager.py
src/: main.py  models.py  openai_client.py  test_src.py
src/context/: context_manager.py  test_context_manager.py
