[tool.poetry]
name = "chatgpt-telegram-bot"
version = "0.1.0"
description = ""
authors = ["sound-round <yudaev1@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "chatgpt_telegram_bot"}]

[tool.poetry.dependencies]
python = "^3.10"
python-telegram-bot = "^20.1"
uvicorn = {extras = ["standard"], version = "^0.21.1"}
httpx = "^0.23.3"
pydantic = "^1.10.7"
python-dotenv = "^1.0.0"
logging = "^0.4.9.6"


[tool.poetry.group.dev.dependencies]
mypy = "^1.1.1"
ruff = "^0.0.258"
pre-commit = "^3.2.0"
black = "^23.1.0"
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
